--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ h1 {
 
 h2 {
   font-size: 500% !important;
+  /* position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%); */
 }
 
 .giphy-embed, img {
@@ -19,7 +24,7 @@ h2 {
 
 iframe {
   min-width: 100%;
-  min-height: 100%
+  min-height: 100%;
 }
 
 .gif-box {
@@ -29,11 +34,15 @@ iframe {
   height: 400px;
 }
 
+.story-box {
+  padding-top: 100px;
+}
+
 .gif-story-box {
   justify-content: center;
-  margin: 0 0 .5em 0;
-  padding: 0em 0em 0em 0em;
-  height: 400px;
+  margin: 0 0 0em 0;
+  padding: 0em 0em 10em 0em;
+  min-height: 800px
 }
 
 .embed {
@@ -44,7 +53,7 @@ iframe {
   display: none;
   /* padding-top: 3em; */
   padding-left: 0px;
-  background-color: #81f6f3
+  /* background-color: #81f6f3 */
 }
 
 .pickerRow {
@@ -55,7 +64,7 @@ iframe {
 
 #story {
   display: none;
-  height: 80%;
+  /* height: 80%; */
 }
 
 .storyRow {
