--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 h1 {
-  font-size: 700% !important;
+  font-size: 900% !important;
   margin-top: .2em;
   margin-bottom: .2em;
 }
@@ -32,6 +32,7 @@ iframe {
   margin: 0 0 .5em 0;
   padding: 0em 0em 0em 0em;
   height: 400px;
+  width: 100%;
 }
 
 .story-box {
@@ -42,7 +43,8 @@ iframe {
   justify-content: center;
   margin: 0 0 0em 0;
   padding: 0em 0em 10em 0em;
-  min-height: 800px
+  min-height: 800px;
+  opacity: 0;
 }
 
 .embed {
