--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,21 @@ h2 {
   transform: translateY(-50%);
 }
 
-.giphy-embed, img {
+#initial {
+  z-index: 0;
+}
+
+.giphy-embed {
   pointer-events: none;
   justify-content: center;
   margin: 0 0 .5em 0;
   padding: 0em .5em 0em 0em;
   height: 100%;
   width: 100%;
+}
+
+img {
+  max-height: 300px
 }
 
 iframe {
@@ -31,7 +39,7 @@ iframe {
   justify-content: center;
   margin: 0 0 .5em 0;
   padding: 0em 0em 0em 0em;
-  height: 400px;
+  /* height: 400px; */
   width: 100%;
 }
 
@@ -63,6 +71,7 @@ iframe {
   display: none;
   /* padding-top: 3em; */
   padding-left: 0px;
+  z-index: 1;
   /* background-color: #81f6f3 */
 }
 
