--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,13 @@ h2 {
   width: 100%;
 }
 
-img {
-  max-height: 300px
+@media (min-width: 1200px) {
+  img {
+    max-height: 300px
+  }
+  #story {
+    margin-top: -7em;
+  }
 }
 
 iframe {
@@ -39,7 +44,7 @@ iframe {
   justify-content: center;
   margin: 0 0 .5em 0;
   padding: 0em 0em 0em 0em;
-  /* height: 400px; */
+  max-height: 400px;
   width: 100%;
 }
 
@@ -72,6 +77,7 @@ iframe {
   /* padding-top: 3em; */
   padding-left: 0px;
   z-index: 1;
+  margin: auto;
   /* background-color: #81f6f3 */
 }
 
@@ -83,7 +89,7 @@ iframe {
 
 #story {
   display: none;
-  margin-top: -7em;
+  /* margin-top: -7em; */
 }
 
 .storyRow {
