--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,16 @@ h1 {
 
 h2 {
   font-size: 500% !important;
+  margin-bottom: 0;
   position: relative;
   top: 50%;
   -ms-transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
+}
+
+.storyRow {
+  margin-bottom: 25em;
 }
 
 #initial {
@@ -22,16 +27,18 @@ h2 {
   justify-content: center;
   margin: 0 0 .5em 0;
   padding: 0em .5em 0em 0em;
-  height: 100%;
   width: 100%;
+  min-width: 100%;
+  max-height: 90%;
 }
 
 @media (min-width: 1200px) {
   img {
-    max-height: 300px
+    /* max-height: 300px */
   }
-  #story {
-    margin-top: -7em;
+  #story {}
+  h2 {
+    /* top: 85%; */
   }
 }
 
@@ -56,7 +63,7 @@ iframe {
   justify-content: center;
   margin: 0 0 0em 0;
   padding: 0em 0em 0em 0em;
-  min-height: 800px;
+  /* min-height: 800px; */
   opacity: 1;
 }
 
@@ -64,7 +71,7 @@ iframe {
   justify-content: center;
   margin: 0 0 0em 0;
   padding: 0em 0em 0em 0em;
-  min-height: 800px;
+  /* min-height: 800px; */
   opacity: 0;
 }
 
@@ -90,10 +97,6 @@ iframe {
 #story {
   display: none;
   /* margin-top: -7em; */
-}
-
-.storyRow {
-  margin-bottom: 7em;
 }
 
 .wordtype {
