--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 .storyRow {
-  margin-bottom: 25em;
+  margin-bottom: 20%;
 }
 
 #initial {
@@ -51,7 +51,7 @@ iframe {
   justify-content: center;
   margin: 0 0 .5em 0;
   padding: 0em 0em 0em 0em;
-  max-height: 400px;
+  /* max-height: 400px; */
   width: 100%;
 }
 
