--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,34 @@ h2 {
   transform: translateY(-50%);
 }
 
+h3 {
+  padding-bottom: 1.2em;
+}
+
+.logo {
+  width: 4em;
+}
+
+.logoBig {
+  width: 75%;
+  /* height: 50%; */
+}
+
+#searchWord {
+  color: #8538b5;
+  line-height: 1.5em;
+}
+
+#logoBox {
+  margin-bottom: 10%;
+}
+
 .storyRow {
-  margin-bottom: 20%;
+  margin-bottom: 40%;
 }
 
 #initial {
-  z-index: 0;
+  z-index: 10;
 }
 
 .giphy-embed {
@@ -40,11 +62,9 @@ h2 {
   h2 {
     /* top: 85%; */
   }
-}
-
-iframe {
-  min-width: 100%;
-  min-height: 100%;
+  .storyRow {
+    margin-bottom: 20%;
+  }
 }
 
 .gif-box {
@@ -59,12 +79,17 @@ iframe {
   /* padding-top: 100px; */
 }
 
+.story-box-first {
+  /* padding-top: 100px; */
+  margin-top: 10%;
+}
+
 .gif-story-box-first {
   justify-content: center;
-  margin: 0 0 0em 0;
   padding: 0em 0em 0em 0em;
   /* min-height: 800px; */
   opacity: 1;
+  margin-top: 10%;
 }
 
 .gif-story-box {
@@ -81,7 +106,7 @@ iframe {
 
 #picker {
   display: none;
-  /* padding-top: 3em; */
+  padding-top: 4em;
   padding-left: 0px;
   z-index: 1;
   margin: auto;
@@ -89,7 +114,7 @@ iframe {
 }
 
 .pickerRow {
-  padding: 8em 0em 8em 0em;
+  padding: 10.5em 0em 8em 1.5em;
   display: none;
   /* height: 400px; */
 }
@@ -102,10 +127,11 @@ iframe {
 .wordtype {
   position: fixed;
   width: 100%;
-  /* padding-bottom: 3em; */
-  z-index: 100;
+  padding-top: 2em;
+  z-index: 10;
   background-color: white;
   /* margin-bottom: 2em; */
+  max-height: 165px;
 }
 
 .btn-primary {
@@ -121,10 +147,11 @@ iframe {
   /* display: flex; */
   /* flex-wrap: wrap; */
   justify-content: center;
-  padding-top: 3em;
+  /* padding-top: 4em; */
 }
 
 .navbar {
+  display: none;
   position: fixed;
   width: 100%;
   top: 0;
@@ -133,7 +160,7 @@ iframe {
 }
 
 .container-fluid+.navbar+#wordtype {
-  padding-top: 120px;
+  /* padding-top: 120px; */
 }
 
 /* Optional: Makes the sample page fill the window. */
