randomize selection order and add picker counter

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ h3 {
   padding-bottom: 1.2em;
 }
 
+h3 {
+  display: inline;
+}
+
 .logo {
   width: 4em;
 }
@@ -60,11 +64,13 @@ h3 {
   max-height: 90%;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1000px) {
   .gif-box {
     max-height: 16%;
   }
-  #story {}
+  #story {
+    padding-top: 0em !important;
+  }
   h2 {
     /* top: 85%; */
   }
@@ -123,6 +129,10 @@ h3 {
   /* background-color: #81f6f3 */
 }
 
+.pickWordBox {
+  padding-bottom: 2em;
+}
+
 .pickerRow {
   padding: 10.5em 0em 8em 1.5em;
   display: none;
@@ -133,7 +143,7 @@ h3 {
   opacity: 0;
   z-index: 0;
   display: block;
-  /* margin-top: -7em; */
+  padding-top: 8em;
 }
 
 #storyCover {
