--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ h3 {
   line-height: 1.5em;
 }
 
+.searchWord {
+  color: #8538b5;
+  line-height: 1.5em;
+}
+
 #logoBox {
   margin-bottom: 10%;
 }
@@ -52,6 +57,7 @@ h3 {
 
 #initialContainer {
   background-color: white;
+  height: 100%;
 }
 
 .giphy-embed {
@@ -128,7 +134,6 @@ h3 {
   padding-left: 0px;
   z-index: 1;
   margin: auto;
-  /* background-color: #81f6f3 */
 }
 
 .pickWordBox {
@@ -144,6 +149,7 @@ h3 {
 #story {
   opacity: 0;
   z-index: 0;
+  margin-top: 2em;
   display: block;
   padding-top: 8em;
 }
@@ -151,6 +157,34 @@ h3 {
 #storyCover {
   background-color: #343a40;
   z-index: 100;
+}
+
+#storyTitle {
+  font-size: 700% !important;
+  background-color: #343a40;
+  display: none;
+  padding-bottom: 2em;
+  padding-top: 60%;
+  line-height: 1500%;
+  /* margin-top: 18.9%; */
+  /* position: fixed; */
+  /* height: 2500px; */
+  width: 100%;
+  /* height: 100%; */
+  color: #8538b5;
+  /* -ms-transform: translateY(-75%);
+  -webkit-transform: translateY(-75%);
+  transform: translateY(-75%);
+  top: 75%; */
+  opacity: 0;
+  text-shadow: 0 0 8px white;
+}
+
+#storyTitleBox {
+  height: 100%;
+  width: 100%;
+  /* position: fixed; */
+  background-color: #343a40;
 }
 
 .wordtype {
